<resources>
    <string name="app_name">KinectDoctor</string>

    <string name="getMRfail">获取病历失败，请稍后再试！</string>

    <!-- Created by tzh. -->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_account">还没有账号？点击这里</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="has_account">已有账号？点击这里</string>
    <string name="hospital">医院</string>
    <string name="clinic_department">科室</string>
    <string name="job_title">职称</string>
    <string name="input_above_six">请输入6位以上</string>
    <string name="input_above_six_pwd">请输入6位以上的密码!</string>
    <string name="input_current_phone">请输入正确的手机号!</string>
    <string name="register_success">注册成功！</string>
    <string name="forbid_empty_input">请不要留空！</string>
    <string name="login_input_error">用户名或密码错误</string>
    <string name="my_info">我的信息</string>
    <string name="save">保存</string>
    <string name="base_info">基本信息</string>
    <string name="job_info">工作信息</string>
    <string name="account_manage">账户管理</string>
    <string name="edit_success">修改成功！</string>
    <!-- Create by tzh. END.-->

</resources>
