<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qg.kinectdoctor.view.ToolbarT
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_size"
        android:background="@color/base_color"
        app:title="@string/job_info"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/right"
            style="@style/ToolbarRightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </com.qg.kinectdoctor.view.ToolbarT>

    <FrameLayout
        android:id="@+id/hospital"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar"
        android:background="@android:color/white"
        app:layout_marginTopPercent="1.25%">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/hospital"/>

        <EditText
            android:id="@+id/hospital_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="80dp"
            android:textSize="14dp"
            tools:text="@string/hospital"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/clinic_department"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/hospital"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/clinic_department"/>

        <EditText
            android:id="@+id/clinic_department_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="80dp"
            android:textSize="14dp"
            tools:text="@string/clinic_department"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/clinic_department"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/job_title"/>

        <EditText
            android:id="@+id/job_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="80dp"
            android:textSize="14dp"
            tools:text="@string/job_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>
